--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "cors": "^2.8.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
